[gd_scene load_steps=4 format=3 uid="uid://d5ihgv4xs2th"]

[ext_resource type="Script" path="res://scripts/ui/setup_dlg.gd" id="1_ucj1n"]
[ext_resource type="FontFile" uid="uid://rfl04y1mlf2l" path="res://assets/fonts/arcadepix/ARCADEPI.TTF" id="2_plpdj"]
[ext_resource type="Texture2D" uid="uid://c7jxpbx67kjb" path="res://assets/aseprite/ui/MainMenu/capibara_icon.png" id="3_g4bhk"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ucj1n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
tab_alignment = 1

[node name="Sound" type="TabBar" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Sound/VBoxContainer"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="FxBtn_en" type="CheckButton" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
button_pressed = true
text = "Sound Fx"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="FxSlider" type="HSlider" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(91, 9)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
step = 10.0
value = 100.0

[node name="VSeparator5" type="VSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Sound/VBoxContainer"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MusicBtn_en" type="CheckButton" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
button_pressed = true
text = "Music"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(91, 9)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
step = 10.0
value = 100.0

[node name="VSeparator6" type="VSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/TabContainer/Sound/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Video" type="TabBar" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="System" type="TabBar" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="AboutUs" type="TabBar" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/AboutUs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer5"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer5"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_g4bhk")

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer5"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "Design & art:"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "Pablo Belmon"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "Music:"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "Cristian"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer6"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "Other tracks:"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer6"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "pixabay.com"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer6"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "Dev Team:"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "AndresTapa"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer4"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "Dev Team:"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "PepitoVeraz"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/TabContainer/AboutUs/VBoxContainer/HBoxContainer4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Btn_cancelar" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "CANCELAR"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Btn_aceptar" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_plpdj")
theme_override_font_sizes/font_size = 10
text = "ACEPTAR"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[connection signal="toggled" from="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer2/FxBtn_en" to="." method="_on_fx_btn_en_toggled"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer2/FxSlider" to="." method="_on_fx_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer/MusicBtn_en" to="." method="_on_music_btn_en_toggled"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Sound/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Btn_cancelar" to="." method="_on_btn_cancelar_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Btn_aceptar" to="." method="_on_btn_aceptar_pressed"]
